--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -131,8 +131,10 @@
                   <span class="text-muted">Remember me</span>
                 </label>
                                 </div>
-                                <div class="text-center">
-                                    <button type="button" class="btn btn-primary my-4">Login</button>
+                                <div class="text-center btn btn-primary my-4">
+                                    <!-- <button type="button" class="btn btn-primary my-4">Login</button>-->
+                                    <a routerLinkActive="active" [routerLink]="['/add-user']">Login</a>
+
                                 </div>
                                 <h4 class="hd-lst">Platform for Quick Service Billing</h4>
                             </div>
