--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,20 @@
 .my--7 {
     background: white;
 }
+
+.navbar-toggler-icon {
+    display: block !important;
+}
+
+.navbar-brand-img {
+    display: none;
+}
+
+
+/*.footer {
+    display: none;
+}*/
+
+body {
+    background-color: white !important;
+}
